--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(https://images.unsplash.com/photo-1542176281-363d7e8c1c04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  background-image: url(/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   /* height: 100%; */
@@ -76,7 +76,7 @@ button {
   justify-content: center;
   align-items: center;
   font-size: 6rem; 
-  color: rgb(87, 119, 140); 
+  color: #961711; 
   font-family: 'Roboto', sans-serif; 
   padding-bottom: 20px;
 }
