--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(/bg.jpg);
+  background-image: url(../bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   /* height: 100%; */
